# sql-helper

./: .env.example  .gitignore  Data Dump - Accrual Accounts.csv  Dockerfile  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py
app/: config.py  main.py
app/api/: chat.py
app/db/: database.py  models.py
app/llm_provider/: agent.py
app/preprocessing/: pipeline.py
app/service/: mcp_client.py  postgres_mcp.py  sql_validator.py
scripts/: ingest.py
scripts/_scratch/: analyze_data.py  converter.py
tests/: test_eval_questions.py
